v0.10.2 - TBD
- Fixed #246 to fix crash caused by PAC hostname resolution
- Added gui script `pxw.exe` to run Px in the background on Windows fixing #203

v0.10.1 - 2025-03-08
- Fixed docker image to work correctly with command line flags, include kerberos
  packages
- Merged PR #233 - force flag to overwrite existing installation of Px in the
  Windows registry
- Merged PR #237 - handle pid reuse and support for pwsh
- Fixed #225, #245 - better handling of PAC file failures and fallback to DIRECT
  mode when they happen
- Replaced quickjs Context with Function as recommended in #206 to avoid thread
  safety issues in PAC handling
- Proxy reload support also for MODE_CONFIG_PAC if loading a PAC URL
- Fixed #208 - try GSS-API authentication on all OS if supported by libcurl

v0.10.0 - 2025-01-10
- Replaced ctypes based libcurl backend with pymcurl which uses cffi and includes
  the latest libcurl binaries
- Fixed #219, #224 - pymcurl uses libcurl with schannel on Windows which loads
  certs from the OS
- Fixed #214 - handle case where no headers are received from client
- Fixed issue curl/discussions/15700 where POST was failing in auth=NONE mode for
  NTLM proxies
- Fixed issue in the Px docker container that would not stop unless it was killed

v0.9.2 - 2024-03-08
- Fixed issue with libcurl binary on Windows - #212

v0.9.1 - 2024-03-02
- Fixed issue with logging not working when set from px.ini - #204
- Fixed issue with environment variables not propagating to all processes in Linux
- Documented how to install binary version of Px on Windows without running in a
  console window - #203
- Fixed issue with quickjs crashing in PAC mode with multiple threads - #198 / #206

v0.9.0 - 2024-01-25
- Added support for domains in noproxy - #2
- Expanded noproxy to work in all proxy modes - #177
- Added --test to verify Px configuration
- Windows binary now created with embeddable Python to avoid being flagged
  by virus scanners - #182 #197