@@ -111,7 +111,7 @@ socktimeout = 20.0
 ;   Proxy info reloaded from Internet Options or --pac URL
 proxyreload = 60
 
-; Run in foreground when run with pxw.exe or pythonw.exe. 0 or 1, default: 0
+; Run in foreground when compiled or frozen. 0 or 1, default: 0
 ;   Px will attach to the console and write to it even though the prompt is
 ;   available for further commands. CTRL-C in the console will exit Px
 foreground = 0
